[package]
name = "libium-zipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["fs", "macros", "rt-multi-thread"] }
libium = { path = "../libium" }
async_zip = "=0.0.16"
tokio-util = "0.7"
anyhow = "1.0"
